  * optimization: Direct calls to CHAR-{EQUAL,LESSP,GREATERP} and
    their NOT- variants no longer cons.
  * optimization: EQUAL hash tables no longer use SXHASH for objects
    of all data types, but instead use an EQL hash for types for which
    EQUAL is the same as EQL
  * optimization: the non-inlined generic versions of AREF and (SETF AREF)
    are significantly faster
  * enhancement: XREF information is now collected to references made
    to global variables using SYMBOL-VALUE and a constant argument.
  * enhancement: SIGINT now causes a specific condition
    SB-SYS:INTERACTIVE-INTERRUPT to be signalled.
  * bug fix: ADJUST-ARRAY is now interrupt-safe.
  * bug fix: adding and removing fd-handlers is now interrupt-safe.
  * bug fix: inlined calls to C now ensure 16byte stack alignment on
    x86/Darwin.
  * bug fix: bad type declaration in the CLOS implementation has
    been fixed. (reported by James Anderson)
  * bug fix: incorrect ROOM reporting on x86-64 has been fixed.
    (thanks to Lutz Euler)
  * bug fix: DEFSETF now allows &ENVIRONMENT and disallows &AUX as
    required by the CLHS. (reported by Samium Gromoff)
  * bug fix: dead unbound variable references now signal an error.
    (reported by Marco Monteiro)
  * bug fix: / with an unused value was being deleted in safe code.
    (thanks to Marco Monteiro and Kevin Reid)
  * bug fix: number of characters that can be written onto a single
    line in a file is unlimited.
  * bug fix: some GC deadlocks caused by asynchronous interrupts have
    been fixed by inhibiting interrupts for when GC is disbled.
  * bug fix: GETHASH, (SETF GETHASH), CLRHASH and REMHASH are now
    interrupt safe.
  * bug fix: binding *BREAK-ON-SIGNALS* to a value that is not a type
    specifier no longer causes infinite recursion.
  * bug fix: SB-EXT:MUFFLE-CONDITIONS declarations no longer trigger a 
    bogus warning in DEFMETHOD bodies (reported by Kevin Reid)